# django-export-edit-import-package

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py.backup
demo/: test_package.py
demo/demo/: settings.py
django_export_edit_import/: database_processor.py  models.py
tests/: __init__.py  conftest.py
venv_test/: pyvenv.cfg
