[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-export-edit-import"
version = "1.0.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A Django app for exporting, editing, and importing data with Excel files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
]
keywords = ["django", "excel", "import", "export", "data-processing"]

dependencies = [
    "Django>=3.2",
    "openpyxl>=3.0.9",
    "celery>=5.0.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-django>=4.0",
    "black>=21.0",
    "flake8>=3.8",
    "isort>=5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/django-export-edit-import"
Repository = "https://github.com/yourusername/django-export-edit-import.git"
"Bug Tracker" = "https://github.com/yourusername/django-export-edit-import/issues"

[tool.setuptools]
packages = ["django_export_edit_import"]

[tool.setuptools.package-data]
"django_export_edit_import" = [
    "templates/**/*.html",
    "static/**/*",
    "migrations/*.py",
    "resources/*",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
